UI: make rotating border light pseudo-element a perfect square to prevent gradient distortion and disappearance at top/bottom of wide modals

--- a/static/css/form.css
+++ b/static/css/form.css
@@ -17,10 +17,10 @@
 .modal-box::before {
   content: '';
   position: absolute;
-  top: -150%;
-  left: -150%;
-  width: 400%;
-  height: 400%;
+  top: 50%;
+  left: 50%;
+  width: 300%;
+  aspect-ratio: 1 / 1;
   background: conic-gradient(
     from 0deg,
     transparent 20%,
@@ -46,10 +46,10 @@
 
 @keyframes borderRotate {
   0% {
-    transform: rotate(0deg);
+    transform: translate(-50%, -50%) rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
 
